--- a/solarpowerlog.conf
+++ b/solarpowerlog.conf
@@ -14,9 +14,37 @@ application:
 	
 };
 
-inverter:
+inverter :
 {
-	test = 0;
+	 inverters = ( 
+  		{ # (REQUIRED) Name of the Inverter (Will be used as reference in the programm)
+  		  name   = "Inverter_1";
+  		  
+  		  # (REQUIRED) "Human Readable Description of the fine piece of hardware. Not interpreted by this software"
+  		  description = "A Inverter inverting";
+  		  
+  		  # (REQUIRED) Selects the family of the inverters.
+  		  # (In SW-Speak: Specifies the family of factory to generate. The generated factory will instanciate the correct model class
+  		  # specified by "model" 
+  		  manufactor =  "SPUTNIK_ENGINEERING";
+          # (REQUIRED) Which model we about to talk too
+           
+          model ="SolarMax_4200S";
+          
+          # (REQUIRED BY SPUTNIK)
+          # mode of comm
+          comms =  "TCP/IP";		
+          # comms = "RS485";
+          tcpadr =  "192.168.0.201";
+          tcpport = 12345;
+          commadr = 1;
+          
+		}
+	    #{ name   = "Snow Crash";
+        #  author =  "Neal Stephenson";
+        #  price  =  9.99;
+        #  qty    =  8; } 
+     );
 };
 
 
