--- a/solarpowerlog.conf
+++ b/solarpowerlog.conf
@@ -40,8 +40,14 @@ inverter :
           comms =  "TCP/IP";		
       
       	  # TCP/IP options. Address and Port.
-          tcpadr =  "192.168.0.201";
-          tcpport = 12345;
+          #tcpadr =  "192.168.0.254";
+          tcpadr =  "mordor";
+           
+          tcpport = 10001;
+          # optional: Wait maximum this time to connect to the inverter.
+          # default: 3 seconds (value: 3000)
+          # Note: Currently blocks the logger until timeout or connection! 
+          tcptimeout = 3;
           
           # Communication address of the inverter (as set in the menu of the inverter)
           commadr = 1;
