The "it does something" commit. I just talked the very first time to the inverter... (and finding out, that the inverter cannot handle reponses longer than 255 bytes..) So new approach: Estimate the answer length and use that for how much commands to put in...)

--- a/solarpowerlog.conf
+++ b/solarpowerlog.conf
@@ -40,18 +40,20 @@ inverter :
           comms =  "TCP/IP";		
       
       	  # TCP/IP options. Address and Port.
-          #tcpadr =  "192.168.0.254";
-          tcpadr =  "mordor";
+          tcpadr =  "192.168.0.201";
+          #tcpadr =  "mordor";
            
-          tcpport = 10001;
+          tcpport = 12345;
           # optional: Wait maximum this time to connect to the inverter.
           # default: 3 seconds (value: 3000)
           # Note: Currently blocks the logger until timeout or connection! 
-          tcptimeout = 3;
+          tcptimeout = 3000;
           
           # Communication address of the inverter (as set in the menu of the inverter)
           commadr = 1;
-          
+          # Adress to use as "our" adress for communication
+		  # defaults to 0xFB
+          ownadr = 0xfb;
 		}
      );
 };
