first working version with asio

--- a/solarpowerlog.conf
+++ b/solarpowerlog.conf
@@ -40,13 +40,14 @@ inverter :
           comms =  "TCP/IP";		
       
       	  # TCP/IP options. Address and Port.
+      	  # Port can also be a so-called "well-known-port" named as string. Example: "http"
           tcpadr =  "192.168.0.203";
-          #tcpadr =  "mordor";
-           
+            
           tcpport = 12345;
           # optional: Wait maximum this time to connect to the inverter.
           # default: 3 seconds (value: 3000)
           # Note: Currently blocks the logger until timeout or connection! 
+          # NOTE: FEATURE CURRENTLY NOT IMPLEMENTED!  
           tcptimeout = 3000;
           
           # Communication address of the inverter (as set in the menu of the inverter)
@@ -54,6 +55,14 @@ inverter :
           # Adress to use as "our" adress for communication
 		  # defaults to 0xFB
           ownadr = 0xfb;
+          
+          # How often should the inverter be queried
+          # The value specifies how long the class will *wait* 
+          # after one query has been answered.
+          # The value can be a float.  
+          # This value is optional and defaults to 5 seconds
+          queryinterval=5;
+          
 		}
      );
 };
@@ -63,9 +72,16 @@ logger:
 {
 	loggers = (
 		{ 
+			# This dumper is known as (required)
 			name = "Simple Dumper 1";
+			# It is of type 
 			type = "DumbDumper";
+			# And gets its data from
 			datasource = "Inverter_1";
+			# Yes, it should clean the screen before dumping
+			# (optional, defaults to false (off)
+			# use true to enable it. 
+			clearscreen = true;
 		}
 		);
 };
