Added Support for parsing the commandline (using liboost::programm options) - can specify the conffile now - prepared for debug level and daemonizing...

--- a/configure.in
+++ b/configure.in
@@ -24,6 +24,7 @@ AX_BOOST_SYSTEM
 AX_BOOST_THREAD
 AX_BOOST_DATE_TIME
 AX_BOOST_ASIO
+AX_BOOST_PROGRAM_OPTIONS
 
 #PKG_CHECK_MODULES(BOOST, [ libboost_thread-mt libboost_date_time-mt ] )
 
