Autotools: - Boost detection did not work properly (did not abort on some errors) - Boost asio detection changed to check the header only, as this is a header-only  (and AX_BOOST_ASIO failed on the Win32 tries) - Added a two-stage Makefile.am -> src has now its own. - renamed run_autotools.sh to bootstrap.sh (as this one is more common)
src/Connections/CConnectTCPAsio.[h|cpp]
- Changed to avoid boost::regex dependency (this requires to hand-pick the asio headers)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,15 +1,7 @@
 ## Makefile.am -- Process this file with automake to produce Makefile.in
 ACLOCAL_AMFLAGS = -I m4
 
-AM_CXXFLAGS = $(BOOST_CPPFLAGS)
+SUBDIRS=src
 
-bin_PROGRAMS = solarpowerlog
-
-solarpowerlog_SOURCES = src/interfaces/CCapability.cpp src/interfaces/CMutexHelper.cpp src/interfaces/factories/InverterFactoryFactory.cpp src/interfaces/factories/IInverterFactory.cpp src/interfaces/CWorkScheduler.cpp src/interfaces/CTimedWork.cpp src/interfaces/IConnect.cpp src/DataFilters/interfaces/factories/IDataFilterFactory.cpp src/DataFilters/interfaces/IDataFilter.cpp src/DataFilters/CDumpOutputFilter.cpp src/configuration/Registry.cpp src/Connections/CConnectDummy.cpp src/Connections/factories/IConnectFactory.cpp src/Connections/CConnectTCPAsio.cpp src/solarpowerlog.cpp src/Inverters/SputnikEngineering/CInverterFactorySputnik.cpp src/Inverters/SputnikEngineering/CInverterSputnikSSeries.cpp src/Inverters/interfaces/CNestedCapaIterator.cpp src/Inverters/interfaces/ICapaIterator.cpp src/Inverters/interfaces/InverterBase.cpp src/patterns/ICommandTarget.cpp src/patterns/IValue.cpp src/patterns/ICommand.cpp src/patterns/IObserverObserver.cpp src/patterns/IObserverSubject.cpp
-
-solarpowerlog_CPPFLAGS = $(CONFIG_CFLAGS)
-solarpowerlog_LDFLAGS = $(CONFIG_LIBS) $(BOOST_LDFLAGS) $(BOOST_THREAD_LIB) $(BOOST_DATE_TIME_LIB) $(BOOST_SYSTEM_LIB) $(BOOST_ASIO_LIB) $(BOOST_PROGRAM_OPTIONS_LIB)
-
-INCLUDES = -I@top_srcdir@/src 
-
-LIBS = $(DEPS_LIBS)
+# install some extras into the dist files...
+dist_doc_DATA = AUTHORS NEWS README ChangeLog solarpowerlog.conf
