--- a/src/config.h.in
+++ b/src/config.h.in
@@ -3,11 +3,11 @@
 /* define if the Boost library is available */
 #undef HAVE_BOOST
 
-/* define if the Boost::ASIO library is available */
-#undef HAVE_BOOST_ASIO
-
 /* define if the Boost::Date_Time library is available */
 #undef HAVE_BOOST_DATE_TIME
+
+/* define if the Boost::PROGRAM_OPTIONS library is available */
+#undef HAVE_BOOST_PROGRAM_OPTIONS
 
 /* define if the Boost::System library is available */
 #undef HAVE_BOOST_SYSTEM
@@ -26,9 +26,6 @@
 
 /* define if the compiler implements namespaces */
 #undef HAVE_NAMESPACES
-
-/* Define to 1 if you have the `socket' function. */
-#undef HAVE_SOCKET
 
 /* Define to 1 if stdbool.h conforms to C99. */
 #undef HAVE_STDBOOL_H
