--- a/configure.in
+++ b/configure.in
@@ -30,14 +30,7 @@ AC_LANG(C++)
 ### Checks for libraries.
 PKG_CHECK_MODULES(CONFIG, libconfig++ >= 1.3.1)
 
-
-# Check for Boost
-AX_BOOST_BASE([1.33])
-CPPFLAGS="$CPPFLAGS $BOOST_CPPFLAGS"
-LDFLAGS="$LDFLAGS $BOOST_LDFLAGS"
-
-
-# Check for Boost ASIO library
+## Check for Boost 
 AX_BOOST_BASE([1.38])
 
 AX_BOOST_SYSTEM
