Changes since last commit:  *  Added some files for which autotools are needed to reconstruct.      This is, as I had problems recreating them under cygwin.  *  ported to Win32. (Builds at least under XP and cygwin. )      (Closes BT-0000001)  *  CTimedWork: Fixed a bug that only showed on Win32.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ Debug/
 .project
 .settings/
 Makefile.in
+config.log
+config.status
+src/Makefile
+Makefile
+src/config.h
+src/stamp-h1
+autom4te.cache/*
