--- a/src/config.h.in
+++ b/src/config.h.in
@@ -54,6 +54,9 @@
 /* Define to 1 if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
+/* Windows API */
+#undef HAVE_WIN32_API
+
 /* Define to 1 if the system has the type `_Bool'. */
 #undef HAVE__BOOL
 
