Added CConfigHelper -- This also fixes some bugs where type-checking of the configuration was not working. Updated Configuration related docs.

--- a/solarpowerlog.conf
+++ b/solarpowerlog.conf
@@ -37,13 +37,13 @@ inverter :
           #		"TCP/IP",          Ethernet 
           #		"RS485,            RS485   
           #		"RS485overTCPIP"   Daisy-Chained modules with one over ethernet, the others chained to the rs485 output.
-          comms =  "TCP/IP";		
+          comms = "TCP/IP";		
       
       	  # TCP/IP options. Address and Port.
       	  # Port can also be a so-called "well-known-port" named as string. Example: "http"
           tcpadr =  "192.168.0.201";
             
-          tcpport = 12345;
+          tcpport = "12345";
           # optional: Wait maximum this time to connect to the inverter.
           # default: 3 seconds (value: 3000)
           # Note: Currently blocks the logger until timeout or connection! 
@@ -61,7 +61,7 @@ inverter :
           # after one query has been answered.
           # The value can be a float.  
           # This value is optional and defaults to 5 seconds
-          queryinterval=5;
+          queryinterval= 5;
 		},
 		{
 		  name   = "Inverter_2";
@@ -89,7 +89,7 @@ inverter :
       	  # Port can also be a so-called "well-known-port" named as string. Example: "http"
           tcpadr =  "192.168.0.202";
             
-          tcpport = 12345;
+          tcpport = "12345";
           # optional: Wait maximum this time to connect to the inverter.
           # default: 3 seconds (value: 3000)
           # Note: Currently blocks the logger until timeout or connection! 
@@ -135,7 +135,7 @@ inverter :
       	  # Port can also be a so-called "well-known-port" named as string. Example: "http"
           tcpadr =  "192.168.0.203";
             
-          tcpport = 12345;
+          tcpport = "12345";
           # optional: Wait maximum this time to connect to the inverter.
           # default: 3 seconds (value: 3000)
           # Note: Currently blocks the logger until timeout or connection! 
