First half-way tested, so far working, CVS Filter

--- a/solarpowerlog.conf
+++ b/solarpowerlog.conf
@@ -162,7 +162,7 @@ inverter :
 logger:
 {
 	loggers = (
-		{ 
+/*		{ 
 			# This dumper is known as (required)
 			name = "Simple Dumper 1";
 			# It is of type 
@@ -174,6 +174,38 @@ logger:
 			# use true to enable it. 
 			clearscreen = true;
 		},
+*/
+		{ 
+			# This dumper is known as (required)
+			name = "CVS_Inverter_1";
+			# It is of type 
+			type = "CVSWriter";
+			# And gets its data from
+			datasource = "Inverter_1";
+			# Where should we write the file?
+			# (If rotate is true, %s will be replaced by the date 
+			# of the file, formated after ISO 8601: YYYY-MM-DD )
+			# Note: If you proved the directory by e.g cron, you can
+			# also write the %s in the path.
+			logfile="/tmp/Inverter1_%s.csv";
+			# Rotate the file at midnight?
+			rotate=true;
+			# What should we log
+			# Valid is "all" as string (Note: The generated CSV will not 
+			# be RFC 4180 compliant, as we change header in mid-file)
+			# Alternate Option:
+			# Specify an array with the caps you want.
+			#Hint: First use "all" then use the generated file to get your array)
+			data2log="all";
+			#data2log= [
+			#  	"Current Grid Feeding Power",
+			#  	"Energy produced today (kWh)",
+			#	"Energy produced this month (kWh)",
+			#   "DC voltage in (V)"
+			# ]; 
+			# 		
+		}
+/*		,
 		{ 
 			# This dumper is known as (required)
 			name = "Simple Dumper 2";
@@ -198,6 +230,7 @@ logger:
 			# use true to enable it. 
 			clearscreen = false;
 		}
+*/
 		);
 };
 
