--- a/solarpowerlog.conf
+++ b/solarpowerlog.conf
@@ -6,10 +6,24 @@
 
 application:
 {
-	# how often query the informations from the inveters
-	# the value specified the time between queries in seconds.
-	# should be a  float. 
-	pollinginterval = 5.0;
+	
+	# what debuglevel should be used if not specified by any component
+	# Choose out of ALL, TRACE, DEBUG, INFO, WARN, ERROR ,FATAL and NONE
+	# optional. If not given, it defaults to "ERROR"
+	# Note, if specified a logconfig file, the config file can override this 
+	# setting.
+	dbglevel = "ALL";
+	
+	# configuration file to load for liblog4cxx
+	# see the liblog4cxx docs for details.
+	# (http://http://logging.apache.org/log4cxx/index.html)
+	# With the configuration file you can specify different log files for different
+	# components of the program.
+	# note, that if not given it will log everything to the console. 
+	# note: if the filename ends with .xml, libconfig tries to load the 
+	# configuration in xml-format, which allows even more tweaks.  
+	#logconfig = "solarpowerlog_lib4cxx.conf";
+	#logconfig = "solarpowerlog_lib4cxx.xml";
 	
 	
 };
