--- a/configure.in
+++ b/configure.in
@@ -31,6 +31,7 @@ AC_LANG(C++)
 
 ### Checks for libraries.
 PKG_CHECK_MODULES(CONFIG, libconfig++ >= 1.3.1)
+PKG_CHECK_MODULES(LOG4CXX, liblog4cxx >= 0.10.0)
 
 ## Check for Boost 
 AX_BOOST_BASE([1.38])
