--- a/configure.in
+++ b/configure.in
@@ -18,6 +18,8 @@ AM_INIT_AUTOMAKE(solarpowerlog, 0.01)
 
 AC_CONFIG_SRCDIR([src/solarpowerlog.cpp])
 
+AC_ARG_ENABLE([logging] , AS_HELP_STRING([--disable-logging], ["Do not use logging. Error output is limited to stdout/err and not configureable."]))
+
 ### Checks for programs.
 # C Compiler
 AC_PROG_CC
@@ -31,7 +33,12 @@ AC_LANG(C++)
 
 ### Checks for libraries.
 PKG_CHECK_MODULES(CONFIG, libconfig++ >= 1.3.1)
-PKG_CHECK_MODULES(LOG4CXX, liblog4cxx >= 0.10.0)
+if test "x$enable_logging" != "xno" ; then
+PKG_CHECK_MODULES(LOG4CXX, liblog4cxx >= 0.10.0, [AC_DEFINE([HAVE_LIBLOG4CXX], [1], [Logging Library])], AC_MSG_RESULT([LibLog4CXX not found]))
+else
+	AC_MSG_NOTICE([Logging disabled as requested.])
+	LOG4CXX_PKG_ERRORS="x"
+fi
 
 ## Check for Boost 
 AX_BOOST_BASE([1.38])
@@ -92,4 +99,12 @@ AC_CONFIG_FILES(
 	[src/Makefile]
 )
 AC_OUTPUT
+
+AC_MSG_NOTICE([CONFIGURATION SUMMARY:]);
+### Print summary
+if test "x$LOG4CXX_PKG_ERRORS" != "x" ; then
+	AC_MSG_NOTICE([Logging Support: ........................... no])
+else
+	AC_MSG_NOTICE([Logging Support: ........................... yes])
+fi
 
