--- a/configure.in
+++ b/configure.in
@@ -18,7 +18,60 @@ AM_INIT_AUTOMAKE(solarpowerlog, 0.01)
 
 AC_CONFIG_SRCDIR([src/solarpowerlog.cpp])
 
-AC_ARG_ENABLE([logging] , AS_HELP_STRING([--disable-logging], ["Do not use logging. Error output is limited to stdout/err and not configureable."]))
+## option for disable logging (default: on)
+AC_ARG_ENABLE([logging],
+	[AS_HELP_STRING([--disable-logging], [Disable logging facility. \
+		Error output is limited to stdout/err and not configureable.])
+	]
+)
+
+### option to disable some modules. Default is to compile everything. 
+
+## Inverters
+# Sputnik support.
+AC_ARG_ENABLE([sputnik],
+	[AS_HELP_STRING([--disable-sputnik],
+			[Do not support inverters by Sputnik engineering.])
+	]
+)
+
+if test "x$enable_sputnik" != "xno" ; then
+	AC_DEFINE([HAVE_INV_SPUTNIK], [1], [Sputnik inverter support])	
+	enable_sputnik=yes
+else
+	AC_MSG_NOTICE([Support for Sputnik inverters disabled as requested.])
+fi
+
+## Filters / Dumpers
+
+# CSV Writer
+AC_ARG_ENABLE([csvlogger],
+	[AS_HELP_STRING([--disable-csvlogger],
+			[Do not support logging to CSV files.])
+	]
+)
+
+if test "x$enable_csvlogger" != "xno" ; then
+	AC_DEFINE([HAVE_FILTER_CSVDUMP], [1], [CSV Writer Support])	
+	enable_csvlogger=yes
+else
+	AC_MSG_NOTICE([Support for CSV Writer disabled as requested.])
+fi
+
+# Dumb Dumper
+AC_ARG_ENABLE([dumbdumper],
+	[AS_HELP_STRING([--disable-dumbdumper],
+			[Do not support the "dumb dumper" logging filter.])
+	]
+)
+
+if test "x$enable_dumbdumper" != "xno" ; then
+	AC_DEFINE([HAVE_FILTER_DUMBDUMP], [1], [Dumb Dumper Support])	
+	enable_dumbdumper=yes
+else
+	AC_MSG_NOTICE([Support for the Dumb Dumper disabled as requested.])
+fi
+
 
 ### Checks for programs.
 # C Compiler
@@ -32,9 +85,13 @@ PKG_CHECK_EXISTS
 AC_LANG(C++)
 
 ### Checks for libraries.
+
+## Check for libconfig. Always required.
 PKG_CHECK_MODULES(CONFIG, libconfig++ >= 1.3.1)
+
+## Check for library liblog4cxx. Can be turned off.  
 if test "x$enable_logging" != "xno" ; then
-PKG_CHECK_MODULES(LOG4CXX, liblog4cxx >= 0.10.0, [AC_DEFINE([HAVE_LIBLOG4CXX], [1], [Logging Library])], AC_MSG_RESULT([LibLog4CXX not found]))
+	PKG_CHECK_MODULES(LOG4CXX, liblog4cxx >= 0.10.0, [AC_DEFINE([HAVE_LIBLOG4CXX], [1], [Logging Library])], AC_MSG_RESULT([LibLog4CXX not found]))
 else
 	AC_MSG_NOTICE([Logging disabled as requested.])
 	LOG4CXX_PKG_ERRORS="x"
@@ -100,11 +157,35 @@ AC_CONFIG_FILES(
 )
 AC_OUTPUT
 
+AC_MSG_NOTICE([]);
 AC_MSG_NOTICE([CONFIGURATION SUMMARY:]);
 ### Print summary
 if test "x$LOG4CXX_PKG_ERRORS" != "x" ; then
-	AC_MSG_NOTICE([Logging Support: ........................... no])
+	AC_MSG_NOTICE([Logging support: ........................... no])
 else
-	AC_MSG_NOTICE([Logging Support: ........................... yes])
+	AC_MSG_NOTICE([Logging support: ........................... yes])
 fi
+
+AC_MSG_NOTICE([INVERTERS:]);
+
+if test "x$enable_sputnik" != "xyes" ; then
+	AC_MSG_NOTICE([Sputnik support: ........................... no])
+else
+	AC_MSG_NOTICE([Sputnik support: ........................... yes])
+fi
+
+AC_MSG_NOTICE([FILTERS AND LOGGERS:]);
+if test "x$enable_csvlogger" != "xyes" ; then
+	AC_MSG_NOTICE([CSV logger support: ........................ no])
+else
+	AC_MSG_NOTICE([CSV logger support: ........................ yes])
+fi
+
+if test "x$enable_dumbdumper" != "xyes" ; then
+	AC_MSG_NOTICE([Dumb Dumper support: ....................... no])
+else
+	AC_MSG_NOTICE([Dumb Dumper support: ....................... yes])
+fi
+
+
 
