--- a/configure.in
+++ b/configure.in
@@ -14,9 +14,13 @@ AC_CONFIG_HEADERS(src/config.h)
 # TODO
 #AC_COPYRIGHT (copyright-notice )
 
-AM_INIT_AUTOMAKE(solarpowerlog, 0.01)
+AM_INIT_AUTOMAKE(solarpowerlog, 0.10+)
 
 AC_CONFIG_SRCDIR([src/solarpowerlog.cpp])
+
+
+### options for some features that might not always be needed 
+### (for shrinking the footprint)
 
 ## option for disable logging (default: on)
 AC_ARG_ENABLE([logging],
@@ -24,6 +28,23 @@ AC_ARG_ENABLE([logging],
 		Error output is limited to stdout/err and not configureable.])
 	]
 )
+
+## option for disable command-line options support
+## as this pulls in a boost library
+AC_ARG_ENABLE([commandlineoptions],
+	[AS_HELP_STRING([--disable-commandlineoptions], [Disable the ability to specify \
+		command-line options. Instead, the program will always use defaults  \
+		(that is e.g reading solarpowerlog.conf from the current dir). Avoids using \
+		some external libraries.])
+	]
+)
+
+if test "x$enable_commandlineoptions" != "xno" ; then
+	enable_commandlineoptions=yes
+else
+	AC_MSG_NOTICE([Support for Sputnik inverters disabled as requested.])
+	enable_commandlineoptions=no
+fi
 
 ### option to disable some modules. Default is to compile everything. 
 
@@ -92,9 +113,13 @@ PKG_CHECK_MODULES(CONFIG, libconfig++ >= 1.3.1)
 ## Check for library liblog4cxx. Can be turned off.  
 if test "x$enable_logging" != "xno" ; then
 	PKG_CHECK_MODULES(LOG4CXX, liblog4cxx >= 0.10.0, [AC_DEFINE([HAVE_LIBLOG4CXX], [1], [Logging Library])], AC_MSG_RESULT([LibLog4CXX not found]))
+	if test "x$LOG4CXX_PKG_ERRORS" != "x"; then
+		enable_logging="no (dependency problem)"
+	else
+		enable_logging="yes"
+	fi 		
 else
 	AC_MSG_NOTICE([Logging disabled as requested.])
-	LOG4CXX_PKG_ERRORS="x"
 fi
 
 ## Check for Boost 
@@ -115,11 +140,16 @@ if test "x$BOOST_DATE_TIME_LIB" = "x"; then
   AC_MSG_ERROR([boost::date_time library $BOOST_DATE_TIME_LIB not found ])
 fi
 
-AX_BOOST_PROGRAM_OPTIONS
-if test "x$BOOST_PROGRAM_OPTIONS_LIB" = "x"; then
-   AC_MSG_ERROR([boost::programm_options library $BOOST_PROGRAM_OPTIONS_LIB not found ])
-   exit 1
+if test "x$enable_commandlineoptions" == "xyes"; then
+	AX_BOOST_PROGRAM_OPTIONS
+	if test "x$BOOST_PROGRAM_OPTIONS_LIB" = "x"; then
+		AC_MSG_NOTICE([boost::programm_options library $BOOST_PROGRAM_OPTIONS_LIB not found ])
+		enable_commandlineoptions="no (dependency problem)"
+	else
+		AC_DEFINE([HAVE_CMDLINEOPTS], [1], [Use Boost for parsing command line options.])	
+	fi
 fi
+
 
 # BOOST ASIO (Header-only-library)
 # note: we are requiring boost 1.38, so we do not need to check the asio version here.
@@ -160,32 +190,14 @@ AC_OUTPUT
 AC_MSG_NOTICE([]);
 AC_MSG_NOTICE([CONFIGURATION SUMMARY:]);
 ### Print summary
-if test "x$LOG4CXX_PKG_ERRORS" != "x" ; then
-	AC_MSG_NOTICE([Logging support: ........................... no])
-else
-	AC_MSG_NOTICE([Logging support: ........................... yes])
-fi
+AC_MSG_NOTICE([Logging support: ........................... $enable_logging])
+AC_MSG_NOTICE([Commandline options: ....................... $enable_commandlineoptions])
 
 AC_MSG_NOTICE([INVERTERS:]);
-
-if test "x$enable_sputnik" != "xyes" ; then
-	AC_MSG_NOTICE([Sputnik support: ........................... no])
-else
-	AC_MSG_NOTICE([Sputnik support: ........................... yes])
-fi
+AC_MSG_NOTICE([Sputnik support: ........................... $enable_sputnik])
 
 AC_MSG_NOTICE([FILTERS AND LOGGERS:]);
-if test "x$enable_csvlogger" != "xyes" ; then
-	AC_MSG_NOTICE([CSV logger support: ........................ no])
-else
-	AC_MSG_NOTICE([CSV logger support: ........................ yes])
-fi
-
-if test "x$enable_dumbdumper" != "xyes" ; then
-	AC_MSG_NOTICE([Dumb Dumper support: ....................... no])
-else
-	AC_MSG_NOTICE([Dumb Dumper support: ....................... yes])
-fi
-
+AC_MSG_NOTICE([CSV logger support: ........................ $enable_csvlogger])
+AC_MSG_NOTICE([Dumb Dumper support: ....................... $enable_dumbdumper])
 
 
