Added missing m4 macros to autotools m4 dir. Should be one step forward for "build on win32 without create configure from linux"

--- a/configure.in
+++ b/configure.in
@@ -172,8 +172,8 @@ AC_HEADER_STDBOOL
 AC_HEADER_TIME
 AC_HEADER_ASSERT
 AC_TYPE_SIZE_T
-AC_CXX_EXPLICIT
-AC_CXX_HAVE_STL
+AX_CXX_EXPLICIT
+AX_CXX_HAVE_STL
 
 
 ### Checks for library functions.
