--- a/tools/sputnik_simulator/solarpowerlog.conf
+++ b/tools/sputnik_simulator/solarpowerlog.conf
@@ -122,7 +122,9 @@ logger:
 				"Inverter Temperature (C)",
 				"Net frequency (Hz)"
 			]; 
-			# 		
+			# options for the plugin
+			Compact_CSV=true;	
+			flush_file_buffer_immediatly=true;	
 		}
 		);
 };
