--- a/Makefile.am
+++ b/Makefile.am
@@ -4,4 +4,4 @@ ACLOCAL_AMFLAGS = -I m4
 SUBDIRS=src
 
 # install some extras into the dist files...
-dist_doc_DATA = AUTHORS NEWS README ChangeLog solarpowerlog.conf
+dist_doc_DATA = AUTHORS NEWS README ChangeLog example_confs/solarpowerlog.conf
