--- a/configure.in
+++ b/configure.in
@@ -42,7 +42,7 @@ AC_ARG_ENABLE([commandlineoptions],
 if test "x$enable_commandlineoptions" != "xno" ; then
 	enable_commandlineoptions=yes
 else
-	AC_MSG_NOTICE([Support for Sputnik inverters disabled as requested.])
+	AC_MSG_NOTICE([Support for commandlineoptions disabled as requested.])
 	enable_commandlineoptions=no
 fi
 
@@ -93,6 +93,41 @@ else
 	AC_MSG_NOTICE([Support for the Dumb Dumper disabled as requested.])
 fi
 
+
+# CSV Writer
+AC_ARG_ENABLE([csvlogger],
+    [AS_HELP_STRING([--disable-csvlogger],
+            [Do not support logging to CSV files.])
+    ]
+)
+
+if test "x$enable_csvlogger" != "xno" ; then
+    AC_DEFINE([HAVE_FILTER_CSVDUMP], [1], [CSV Writer Support]) 
+    enable_csvlogger=yes
+else
+    AC_MSG_NOTICE([Support for CSV Writer disabled as requested.])
+fi
+
+# HTML Writer
+AC_ARG_ENABLE([htmlwriter],
+    [AS_HELP_STRING([--disable-htmlwriter],
+            [Do not support the html writer module for writing static HTML files.])
+    ]
+)
+
+if test "x$enable_htmlwriter" != "xno" ; then
+    AC_DEFINE([HAVE_FILTER_HTMLWRITER], [1], [HTML Writer Support])   
+    enable_htmlwriter=yes
+    CTEMPLATE_LIB=-lctemplate
+    CTEMPLATE_CFLAGS="-I ../extlibs"
+    CTEMPLATE_DEPS=libctemplate.a
+else
+    AC_MSG_NOTICE([Support for the HTMLWriter disabled as requested.])
+fi
+
+AC_SUBST(CTEMPLATE_LIB)
+AC_SUBST(CTEMPLATE_CFLAGS)
+AC_SUBST(CTEMPLATE_DEPS)
 
 ### Checks for programs.
 # C Compiler
@@ -219,3 +254,5 @@ AC_MSG_NOTICE([Sputnik support: ........................... $enable_sputnik])
 AC_MSG_NOTICE([FILTERS AND LOGGERS:]);
 AC_MSG_NOTICE([CSV logger support: ........................ $enable_csvlogger])
 AC_MSG_NOTICE([Dumb Dumper support: ....................... $enable_dumbdumper])
+AC_MSG_NOTICE([HTML Writer support: ....................... $enable_htmlwriter])
+
