--- a/example_confs/htmlwriter.conf
+++ b/example_confs/htmlwriter.conf
@@ -12,12 +12,12 @@
             # the HTML Writer object (see above, name), listing all known capabilites
             # for the inveerter. 
             
-            # the next one is the main switch for the feature: (optional)
+            # the next one is the main switch for the feature: (optional, default false)
             # generate_template = false;
             
             # this one says the template generator, in what directory to put
-            # the template (optional)
-            # generate_template_dir = "/tmp";
+            # the template (optional, default /tmp/)
+            # generate_template_dir = "/tmp/";
             
             #update the HTML page every seconds:
             #the value "0" means everytime something changes ,probably not what you want
@@ -30,14 +30,14 @@
             # As in the CSV Plugin,
             # you can specify here the file/path where to store the files
             # the files. %s will be replaced by the current date in ISO 8601
-            # format: YYYY-MM-DD. When there is no %S, the file will be replaced
+            # format: YYYY-MM-DD. When there is no %s, the file will be replaced
             # on midnight. 
             # This option is required. 
-            htmlfile="/var/www/solarpowerlog-%S.html"; 
+            htmlfile="/var/www/solarpowerlog-%s.html"; 
             
             # Template file to be used
             # This file will be loaded as template... Mandatory.
-            templatefile="example_confs/htmlwritertemplate/test.tmpl"
+            templatefile="example_confs/htmlwritertemplate/test.tmpl";
             
         }
 
