--- a/example_confs/htmlwriter.conf
+++ b/example_confs/htmlwriter.conf
@@ -1,6 +1,6 @@
         { 
             # This filters will be known as (required)
-            name = "HTMLWriterExample ";
+            name = "HTMLWriterExample";
             # It is of the type 
             type = "HTMLWriter";
             # And gets its data from
@@ -38,6 +38,19 @@
             # Template file to be used
             # This file will be loaded as template... Mandatory.
             templatefile="example_confs/htmlwritertemplate/test.tmpl";
+            
+            # The filter can do some modifcations on the values 
+            # before handing them over to the template engine:
+            # to keep it flexible, this is done with this list lists:
+            # what_capbility names the one to be formatted
+            # formatting operation is the operation to be performed:
+            #   stripwebroot    remove the webroot-prefix from the capa
+                                
+            formatters = ( 
+            # (  what_capability,    formating_operation )
+              (   CVSDumper::Filename, stripwebroot      )
+            );
+             
             
         }
 
