--- a/tools/sputnik_simulator/solarpowerlog.conf
+++ b/tools/sputnik_simulator/solarpowerlog.conf
@@ -33,7 +33,8 @@ inverter :
 	 inverters = ( 
   		{ # (REQUIRED) Name of the Inverter (Will be used as reference in the programm)
   		  name   = "Netcat";
-  		  
+  		  dbglevel = "INFO";
+    
   		  # (REQUIRED) "Human Readable Description of the fine piece of hardware. Not interpreted by this software"
   		  description = "A Inverter inverting";
   		  
@@ -125,7 +126,74 @@ logger:
 			# options for the plugin
 			Compact_CSV=true;	
 			flush_file_buffer_immediatly=true;	
-		}
+		},
+		{ 
+            # This filters will be known as (required)
+            name = "HTMLWriter_Netcat";
+            # It is of the type 
+            type = "HTMLWriter";
+            # And gets its data from
+            datasource = "CVS_Netcat";
+                 
+            # The module has a parameter-set which might be useful for generating
+            # your own templates: Template-Generatin-Assitance. In this mode, all generated
+            # values will be put out to a template file called like the name of 
+            # the HTML Writer object (see above, name), listing all known capabilites
+            # for the inverter. 
+            
+            # the next one is the main switch for the feature: (optional, default false)
+            generate_template = true;
+            
+            # this one says the template generator, in what directory to put
+            # the template (optional, default /tmp/)
+            generate_template_dir = "/tmp";
+            
+            #update the HTML page every seconds:
+            #the value "0" means everytime something changes ,probably not what you want
+            #( WARNING: THE VALUE 0 IS NOT YET IMPLEMENTED)
+            #if not given, we will try to extract this out of the Data Query Interval
+            #of the inverter, which will, if not available, defaults to 300.  
+            #if not available 
+            writeevery=15;
+            
+            # As in the CSV Plugin,
+            # you can specify here the file/path where to store the files
+            # the files. %s will be replaced by the current date in ISO 8601
+            # format: YYYY-MM-DD. When there is no %s, the file will be replaced
+            # on midnight. 
+            # This option is required. 
+            htmlfile="/tmp/solarpowerlog-%s.html"; 
+            
+            # Template file to be used
+            # This file will be loaded as template... Mandatory.
+            templatefile="example_confs/htmlwritertemplate/test.tmpl";   
+            
+            # for the stripwebroot formatter, you need to specify what is
+            # the webroot, the filesystem location of your webserver.
+            # In other words, this part is stripped away from filenames to 
+            # let them work in the HTML doc.
+            # example: your csv is in /var/www/solar/xxx.csv
+            # your webserver's root is /var/www/
+            # so a webrowser access the csv, it has to be /solar/xxx.csv
+            # in the html. Therefore /var/www has to be stripped.
+            # (as this is also the default in many linux systems, this is
+            # used if not specified here) 
+            #webroot=/var/www
+            
+            # The filter can do some modifcations on the values 
+            # before handing them over to the template engine:
+            # to keep it flexible, this is done with this list lists:
+            # what_capbility names the one to be formatted
+            # formatting operation is the operation to be performed:
+            #   stripwebroot    remove the webroot-prefix from the capa
+            #                   this one needs the config "webroot".                    
+            formatters = ( 
+            # [ what_capability,       formating_operation ], 
+              [ "CVSDumper::Filename", "stripwebroot"      ]
+            );  
+              
+            }
+            
 		);
 };
 
