[DATAFILTERS] Formatter interface changed -- does not get the configuration data anymore Also, the formatters gets there parameters now not by configuration entries in the Data-filters configuration,  but by arguments given to the formatter-configuration array in the solarpowerlog.conf

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,6 +15,7 @@ interfaces/CTimedWork.cpp Connections/interfaces/IConnect.cpp \
 DataFilters/interfaces/factories/IDataFilterFactory.cpp \
 DataFilters/HTMLWriter/formatter/IFormater.cpp \
 DataFilters/HTMLWriter/formatter/CFormaterWebRootStrip.cpp \
+DataFilters/HTMLWriter/formatter/CFormatterSearchCSVEntry.cpp \
 DataFilters/interfaces/IDataFilter.cpp DataFilters/CDumpOutputFilter.cpp \
 DataFilters/CCSVOutputFilter.cpp DataFilters/HTMLWriter/CHTMLWriter.cpp \
 configuration/Registry.cpp configuration/ILogger.cpp \
