[TEMPLATES] Coded some templates, not yet finished. The templates are for the HTML Writer

--- a/tools/sputnik_simulator/solarpowerlog.conf
+++ b/tools/sputnik_simulator/solarpowerlog.conf
@@ -96,7 +96,7 @@ logger:
 			# of the file, formated after ISO 8601: YYYY-MM-DD )
 			# Note: If you proved the directory by e.g cron, you can
 			# also write the %s in the path.
-			logfile="/tmp/Inverter1_%s.csv";
+			logfile="/var/www/Inverter1_%s.csv";
 			# Rotate the file at midnight?
 			rotate=true;
 			# What should we log
@@ -162,34 +162,35 @@ logger:
             # format: YYYY-MM-DD. When there is no %s, the file will be replaced
             # on midnight. 
             # This option is required. 
-            htmlfile="/tmp/solarpowerlog-%s.html"; 
+            htmlfile="/var/www/solarpowerlog-%s.html"; 
             
             # Template file to be used
             # This file will be loaded as template... Mandatory.
             templatefile="example_confs/htmlwritertemplate/test.tmpl";   
             
-            # for the stripwebroot formatter, you need to specify what is
-            # the webroot, the filesystem location of your webserver.
-            # In other words, this part is stripped away from filenames to 
-            # let them work in the HTML doc.
-            # example: your csv is in /var/www/solar/xxx.csv
-            # your webserver's root is /var/www/
-            # so a webrowser access the csv, it has to be /solar/xxx.csv
-            # in the html. Therefore /var/www has to be stripped.
-            # (as this is also the default in many linux systems, this is
-            # used if not specified here) 
-            #webroot=/var/www
-            
+               
             # The filter can do some modifcations on the values 
             # before handing them over to the template engine:
             # to keep it flexible, this is done with this list lists:
-            # what_capbility names the one to be formatted
+            # Parameters: 
+            #   what_capbility  names the one to be formatted
+            #   where_to_store  (optional) if you want to export it to the 
+            #                   using another name. if "", uses the cap name
+            #   parameters      one string with extra parameters to be supplied
+            #                   to the formatter. 
+            #                   note: there can be as many parameters as the 
+            #                   formatter wants, each in its own string)
+            #  
             # formatting operation is the operation to be performed:
             #   stripwebroot    remove the webroot-prefix from the capa
-            #                   this one needs the config "webroot".                    
+            #                   this one needs the config "webroot". 
+            #                   See below for the parameter this formatter uses.
+                          
             formatters = ( 
-            # [ what_capability,       formating_operation ], 
-              [ "CVSDumper::Filename", "stripwebroot"      ]
+            # [ what_capability,       formating_operation, where_to_store ], 
+              [ "CSVDumper::Filename", "stripwebroot", "" , "/var/www" ],
+              [ "CSVDumper::LoggedCaps", "searchcvsentry", "powernow", "Current Grid Feeding Power" ],
+              [ "CSVDumper::LoggedCaps", "searchcvsentry", "kwhtoday", "Energy produced today (kWh)" ]
             );  
               
             }
@@ -197,3 +198,15 @@ logger:
 		);
 };
 
+
+# Parameter for the foramatter stripwebroot:
+# for the stripwebroot formatter, you need to specify what is
+# the webroot, the filesystem location of your webserver.
+# In other words, this part is stripped away from filenames to 
+# let them work in the HTML doc.
+# example: your csv is in /var/www/solar/xxx.csv
+# your webserver's root is /var/www/
+# so a webrowser access the csv, it has to be /solar/xxx.csv
+# in the html. Therefore /var/www has to be stripped.
+# (as this is also the default in many linux systems, this is
+# used if not specified here) 
