--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,7 @@
 ## Makefile.am -- Process this file with automake to produce Makefile.in
 ACLOCAL_AMFLAGS = -I m4
 
-SUBDIRS=src
+SUBDIRS=extlibs/dbixx src
 
 # install some extras into the dist files...
 dist_doc_DATA = AUTHORS NEWS README ChangeLog example_confs/solarpowerlog.conf
