[GIT] Added generated files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@ src/config.h.in
 src/solarpowerlog
 *.a
 extlibs/ctemplate/template
+libtool
+m4/libtool.m4
+m4/lt~obsolete.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+extlibs/dbixx/autom4te.cache/
+extlibs/dbixx/config.guess
+extlibs/dbixx/config.sub
+extlibs/dbixx/depcomp
+extlibs/dbixx/install-sh
+extlibs/dbixx/libtool
+extlibs/dbixx/ltmain.sh
+extlibs/dbixx/missing
+
